# serializer version: 1
# name: test_eeba_export[kt_gr-gr_master_data_case--eeba-export-403-Applicant-admin_user]
  dict({
    'detail': 'Invalid or missing X-EBAU-EEBA-SECRET header.',
  })
# ---
# name: test_eeba_export[kt_gr-gr_master_data_case-shared_secret--403-Applicant-admin_user]
  dict({
    'detail': 'Sie sind nicht berechtigt, diese Aktion durchzuführen.',
  })
# ---
# name: test_eeba_export[kt_gr-gr_master_data_case-shared_secret-eeba-export-200-Applicant-admin_user]
  dict({
    'applicant': dict({
      'city': 'Testingen',
      'email': 'example@example.com',
      'firstName': 'Esther',
      'juristicName': 'Test AG',
      'lastName': 'Tester',
      'phone': '+417878787',
      'street': 'Testweg',
      'streetNumber': 321,
      'zip': 4321,
    }),
    'completionDate': None,
    'constructionStartDate': None,
    'ebauId': 'INSTANCE_ID',
    'invoiceRecipient': dict({
      'city': 'Zizers',
      'email': 'invoice@example.com',
      'firstName': 'Invoice',
      'juristicName': 'Rechnung AG',
      'lastName': 'Master',
      'phone': '+417979797',
      'street': 'Hauptstrasse',
      'streetNumber': 12,
      'zip': 2312,
    }),
    'landowner': dict({
      'city': 'Beispieldorf',
      'email': None,
      'firstName': 'Sandra',
      'juristicName': None,
      'lastName': 'Beispiel',
      'phone': None,
      'street': 'Beispielstrasse',
      'streetNumber': 16,
      'zip': 2222,
    }),
    'plots': list([
      dict({
        'bfsNumber': None,
        'number': 123465,
      }),
      dict({
        'bfsNumber': None,
        'number': 789876,
      }),
    ]),
    'projectAuthor': dict({
      'city': 'Thun',
      'email': None,
      'firstName': 'Hans',
      'juristicName': None,
      'lastName': 'Muster',
      'phone': None,
      'street': 'Bahnhofstrasse',
      'streetNumber': 3,
      'zip': 3600,
    }),
    'proposal': 'Einfamilienhaus',
    'proposalList': list([
      None,
      None,
    ]),
    'readOnly': True,
    'statusName': 'Pamela Horton',
    'volumes': dict({
      'deconstructionMaterial': None,
      'excavation': None,
      'removedTopsoil': None,
      'roadSurface': None,
      'soilingSuspicion': None,
      'trackExcavation': None,
      'yearOfConstructionCases': None,
    }),
  })
# ---
# name: test_eeba_export[kt_so-so_master_data_case-shared_secret-eeba-export-403-Applicant-admin_user]
  dict({
    'detail': 'Sie sind nicht berechtigt, diese Aktion durchzuführen.',
  })
# ---
